deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
  namespace: opendistro
spec:
  selector:
    matchLabels:
      component: elasticsearch
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: amazon/opendistro-for-elasticsearch:1.10.1
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9600
          name: analyzer
          protocol: TCP
      - name: kibana
        image: amazon/opendistro-for-elasticsearch-kibana:1.10.1
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP
        volumeMounts:
        - name: opendistro-persistent-storage
          mountPath: /usr/share/elasticsearch/data
      volumes:
      - name: opendistro-persistent-storage
        persistentVolumeClaim:
          claimName: opendistro-pv-claim
