statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: elasticsearch
  namespace: opendistro
  labels:
    service: elasticsearch
spec:
  serviceName: elastic-service
  # NOTE: This is number of nodes that we want to run
  # you may update this
  replicas: 2
  selector:
    matchLabels:
      component: elasticsearch
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image: amazon/opendistro-for-elasticsearch:1.10.1
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9600
          name: analyzer
          protocol: TCP
        volumeMounts:
        - name: opendistro-pv-claim
          mountPath: /usr/share/elasticsearch/data
      - name: kibana
        image: amazon/opendistro-for-elasticsearch-kibana:1.10.1
        ports:
        - containerPort: 5601
          name: http
          protocol: TCP

  volumeClaimTemplates:
  - metadata:
      name: opendistro-pv-claim
    spec:
      accessModes:
        - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: elastic-service
  namespace: opendistro
spec:
  clusterIP: None
  ports:
  - name: elasticsearch
    port: 9200
    targetPort: 9200
  - name: kibana
    port: 5601
    targetPort: 5601
  selector:
    component: elasticsearch
